{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 234,
  "lineage": "86031ac4-0bfd-ff8c-6e29-31d71fcc98ca",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:vpc/xxxxxxxxx",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-042df3196e710198a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c98389a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": ["dev-2"]
              }
            ],
            "id": "xxxxxxxxx",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0b10666a0705ad1f1",
            "ipv6_cidr_block": "2a05:d014:a20:5b00::/56",
            "main_route_table_id": "rtb-05064607acdebbe21",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ssh_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07df274a488ca9195",
            "arn": "arn:aws:ec2:eu-central-1:722913253728:instance/i-03e120ba0ab5ba003",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e120ba0ab5ba003",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": ["2a05:d014:a20:5b01:3c59:5b7:fb34:8568"],
            "key_name": "dev-2-ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdb6c651476651bf",
            "private_dns": "ip-10-0-5-220.eu-central-1.compute.internal",
            "private_ip": "10.0.5.220",
            "public_dns": "ec2-3-120-139-208.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.139.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b38f814151d9080e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a77477f49d7fc72",
            "tags": {
              "Name": "dev-2-ssh-bastion"
            },
            "tags_all": {
              "Name": "dev-2-ssh-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": ["sg-0008121ede14a34a2"]
          },
          "dependencies": ["data.aws_subnet_ids.public", "data.aws_vpc.vpc"]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0fe2accdd3d7d022d",
            "tags": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045334f567c413dde",
            "association_id": "eipassoc-02bf3edbe3e817c09",
            "domain": "vpc",
            "id": "eipalloc-045334f567c413dde",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0eb7be07bfb0853fd",
            "private_dns": "ip-10-0-4-240.eu-central-1.compute.internal",
            "private_ip": "10.0.4.240",
            "public_dns": "ec2-3-126-173-3.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.173.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-2-eu-central-1a",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-eu-central-1a",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc": true
          },
          "dependencies": ["data.aws_availability_zones.available"]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:internet-gateway/igw-0f248223d65341a18",
            "id": "igw-0f248223d65341a18",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045334f567c413dde",
            "connectivity_type": "public",
            "id": "nat-0722e2a38bd0345a1",
            "network_interface_id": "eni-0eb7be07bfb0853fd",
            "private_ip": "10.0.4.240",
            "public_ip": "3.126.173.3",
            "subnet_id": "subnet-0fc55011613b9c589",
            "tags": {
              "Name": "dev-2-eu-central-1a",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-eu-central-1a",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0fe2accdd3d7d022d",
            "gateway_id": "",
            "id": "r-rtb-0f699502d8aaaf5712750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0fe2accdd3d7d022d",
            "gateway_id": "",
            "id": "r-rtb-0f699502d8aaaf5712750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0fe2accdd3d7d022d",
            "gateway_id": "",
            "id": "r-rtb-0f699502d8aaaf5712750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f699502d8aaaf5711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0722e2a38bd0345a1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f248223d65341a18",
            "id": "r-rtb-0e980e9cb7e6837c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e980e9cb7e6837c3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f248223d65341a18",
            "id": "r-rtb-0e980e9cb7e6837c32750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e980e9cb7e6837c3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:route-table/rtb-0f699502d8aaaf571",
            "id": "rtb-0f699502d8aaaf571",
            "owner_id": "722913253728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0fe2accdd3d7d022d",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0722e2a38bd0345a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-2-private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:route-table/rtb-0e980e9cb7e6837c3",
            "id": "rtb-0e980e9cb7e6837c3",
            "owner_id": "722913253728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f248223d65341a18",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f248223d65341a18",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-2-public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0675d10854ba2210c",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-094511bef8f1c6d0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ada05753bd069e41",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-0185d12b87d5cbf93"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00620844fe2bc9f84",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-083cfe47f70576d30"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030ce9a4a52f133c3",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-0ab0f258e30e9581c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0829be44b70cb49e0",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-0a7d2d8079aa2463e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d08af80a6b9c6a4",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-0d225d9cce5e77574"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b03681233d017e3",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-06e026b00ae2b012e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf558a7c08366eb4",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-0abae5424bc6041f4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007967536a06757de",
            "route_table_id": "rtb-0f699502d8aaaf571",
            "subnet_id": "subnet-031938fe60ce54d1b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3bd8294b326c8d8",
            "route_table_id": "rtb-0e980e9cb7e6837c3",
            "subnet_id": "subnet-0fc55011613b9c589"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05412b3b6591aa706",
            "route_table_id": "rtb-0e980e9cb7e6837c3",
            "subnet_id": "subnet-02a77477f49d7fc72"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7eb89ca7796e7eb",
            "route_table_id": "rtb-0e980e9cb7e6837c3",
            "subnet_id": "subnet-07e0963d40dbd8634"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-094511bef8f1c6d0e",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094511bef8f1c6d0e",
            "ipv6_cidr_block": "2a05:d014:a20:5b06::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0921c8fd793da025b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-db-eu-central-1a",
              "Tier": "Database",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-db-eu-central-1a",
              "Tier": "Database",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0185d12b87d5cbf93",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0185d12b87d5cbf93",
            "ipv6_cidr_block": "2a05:d014:a20:5b07::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01e22805fb63fd6cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-db-eu-central-1b",
              "Tier": "Database",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-db-eu-central-1b",
              "Tier": "Database",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-083cfe47f70576d30",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083cfe47f70576d30",
            "ipv6_cidr_block": "2a05:d014:a20:5b08::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-02189fb0c2f811aec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-db-eu-central-1c",
              "Tier": "Database",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-db-eu-central-1c",
              "Tier": "Database",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0ab0f258e30e9581c",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab0f258e30e9581c",
            "ipv6_cidr_block": "2a05:d014:a20:5b09::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05cecaf337160b6c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-elasticache-eu-central-1a",
              "Tier": "ElastiCache",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-elasticache-eu-central-1a",
              "Tier": "ElastiCache",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0a7d2d8079aa2463e",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7d2d8079aa2463e",
            "ipv6_cidr_block": "2a05:d014:a20:5b0a::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-030fa618296d18538",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-elasticache-eu-central-1b",
              "Tier": "ElastiCache",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-elasticache-eu-central-1b",
              "Tier": "ElastiCache",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0d225d9cce5e77574",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d225d9cce5e77574",
            "ipv6_cidr_block": "2a05:d014:a20:5b0b::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c91609a366d05992",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-elasticache-eu-central-1c",
              "Tier": "ElastiCache",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2-elasticache-eu-central-1c",
              "Tier": "ElastiCache",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-06e026b00ae2b012e",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e026b00ae2b012e",
            "ipv6_cidr_block": "2a05:d014:a20:5b03::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-005c468ae58476e28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-private-eu-central-1a",
              "Tier": "Private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-2-private-eu-central-1a",
              "Tier": "Private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0abae5424bc6041f4",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abae5424bc6041f4",
            "ipv6_cidr_block": "2a05:d014:a20:5b04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-032e4f370f23fefaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-private-eu-central-1b",
              "Tier": "Private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-2-private-eu-central-1b",
              "Tier": "Private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-031938fe60ce54d1b",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031938fe60ce54d1b",
            "ipv6_cidr_block": "2a05:d014:a20:5b05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0273a2e7c57101b8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-private-eu-central-1c",
              "Tier": "Private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-2-private-eu-central-1c",
              "Tier": "Private",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0fc55011613b9c589",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc55011613b9c589",
            "ipv6_cidr_block": "2a05:d014:a20:5b00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-000d6fcc8ec181d39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-public-eu-central-1a",
              "Tier": "Public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-2-public-eu-central-1a",
              "Tier": "Public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-02a77477f49d7fc72",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a77477f49d7fc72",
            "ipv6_cidr_block": "2a05:d014:a20:5b01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01c091fc9202fb737",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-public-eu-central-1b",
              "Tier": "Public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-2-public-eu-central-1b",
              "Tier": "Public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-07e0963d40dbd8634",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e0963d40dbd8634",
            "ipv6_cidr_block": "2a05:d014:a20:5b02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0be7898a9d2fe456b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2-public-eu-central-1c",
              "Tier": "Public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-2-public-eu-central-1c",
              "Tier": "Public",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:vpc/xxxxxxxxx",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e84ad3a159e9953",
            "default_route_table_id": "rtb-05064607acdebbe21",
            "default_security_group_id": "sg-0008121ede14a34a2",
            "dhcp_options_id": "dopt-c98389a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "xxxxxxxxx",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0b10666a0705ad1f1",
            "ipv6_cidr_block": "2a05:d014:a20:5b00::/56",
            "ipv6_cidr_block_network_border_group": "eu-central-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05064607acdebbe21",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            },
            "tags_all": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            }
          }
        }
      ]
    }
  ]
}